Fix overflow.

--- a/src/_css/style.css
+++ b/src/_css/style.css
@@ -14,7 +14,7 @@ body {
 	justify-content: center;
 	margin: 0 1em;
 	height: 100%;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 main {
